--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
     		<artifactId>modelmapper</artifactId>
     		<version>3.1.0</version>
 		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    		<version>2.7.5</version>
+		</dependency>
 		
 	</dependencies>
 
