--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=claveconjunto
 spring.datasource.url=jdbc:mysql://localhost:3306/apiconjuntoresidencial
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-message=always
